public_html/media/css/style.css
/* Fonts */

@font-face {
	font-family: 'Open Sans';
	font-weight: normal;
	font-style: normal;
	src: url('../fonts/OpenSans-Regular.woff') format('woff'),
	     url('../fonts/OpenSans-Regular.ttf');
}

@font-face {
	font-family: 'Open Sans';
	font-weight: bold;
	font-style: normal;
	src: url('../fonts/OpenSans-Bold.woff') format('woff'),
	     url('../fonts/OpenSans-Bold.ttf');
}

@font-face {
	font-family: 'Open Sans';
	font-weight: normal;
	font-style: italic;
	src: url('../fonts/OpenSans-Italic.woff') format('woff'),
	     url('../fonts/OpenSans-Italic.ttf');
}

@font-face {
	font-family: 'Open Sans';
	src: url('../fonts/OpenSans-BoldItalic.woff') format('woff'),
	     url('../fonts/OpenSans-BoldItalic.ttf');
	font-style: italic;
	font-weight: bold;
}

/* All versions */

.body {
	margin: 0;
	background: #edeae9;
	min-width: 320px;
	overflow-y: scroll;
	line-height: 1;
	font-family: 'Open Sans', arial, sans-serif;
	font-size: 16px;
}

.header {
	position: fixed;
	top: 0;
	border-bottom: 1px solid #d5d1d0;
	background: #fff;
	width: 100%;
	min-width: 320px;
	text-align: center;
}

.header-padding {
	position: relative;
	margin: 0 auto;
	max-width: 944px;
}

.header-nav {
	position: absolute;
	top: 0;
	right: 0;
	margin: 0;
	padding: 0;
	list-style: none;
	line-height: 60px;
}

.header-item {
	float: left;
}

.header-split {
	float: left;
	margin: 18px 8px;
	border-right: 1px solid #d5d1d0;
	height: 24px;
	width: 0px;
}

.icon-holder {
	position: relative;
	display: block;
	margin: 12px auto;
	padding: 10px;
	height: 16px;
	width: 16px;
	cursor: pointer;
}

.icon {
	display: block;
	background-size: 16px;
	height: 16px;
	width: 16px;
	opacity: 0.55;
}

.icon-holder:hover .icon {
	opacity: 0.85;
}

.icon-user {
	opacity: 1;
}

.icon-notif {
	background-image: url('../img/icon_notifications.png');
}

.icon-roomies {
	background-image: url('../img/icon_find_roomies.png');
}

.icon-accomm {
	background-image: url('../img/icon_accommodation.png');
}

.icon-settings {
	background-image: url('../img/icon_settings.png');
}

.icon-logout {
	background-image: url('../img/icon_logout.png');
}

.logo-link {
	display: inline-block;
	position: relative;
	margin: 5px 0;
	height: 50px;
	text-decoration: none;
	color: #000;
	font-variant: small-caps;
	font-family: Consolas, Monaco, 'Lucida Console', monospace;
	font-weight: normal;
	font-size: 2rem;
}

.logo-link:after {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	content: "";
}

.logo-img {
	border: 0;
	height: 50px;
}

.header-space {
	height: 61px;
}

.main {
	margin: 0 auto;
	border-top: 1px solid transparent;
	padding: 0 0 16px;
	max-width: 976px;
}

.box, .column-box {
	margin: 16px;
	border-radius: 2px;
	/*border: 1px solid #d2c7be;*/
	border-width: 1px;
	border-style: solid;
	border-color: #e9e6e5 #e4e0df #d5d1d0;
	background: #fff;
}

.column-wrapper {
	margin: 16px 0 -16px 16px;
	padding: 0 0 16px;
	overflow: hidden;
}

.column-2 {
	float: left;
	width: 50%;
}

.column-box {
	margin: 0 16px 0 0;
}

.box-padding {
	margin: 16px;
}

.box-list {
	margin: 0;
	padding: 0;
	list-style-type: none;
}

.banner {
	margin: 2.5em auto;
	width: 500px;
	text-align: center;
	color: #534e4d;
}

.details-box {
	float : left;
}
.profile-box {
	overflow: hidden;
	display: table;
}

.profile-picture {
	float: left;
	/*height: 180px;
	width:180px;*/
	margin: 0 .8em 1em 0;
	height: 3.6em;
}

.housepic {
	width: 4em;
	height: 4em;
	float: left;
	margin: 0 10px 10px 0
}

.accommodation {
	overflow: hidden;
}

.links-wrapper {
	display: table-cell;
	vertical-align: middle;
}

.table, .td, .th {
	border: 1px solid black;
	border-collapse: collapse;
}

.questions-admin {
	width: 100%;
}

.tab {
	display: inline-block;
}

.box-content {
	display: none;
}

.main-pic {
	display: block;
	height: 6em;
	width: 6em;
	margin: 0 .8em 0 0;
	background-image: url('../img/profile-picture-placeholder.gif');
	background-size: auto 6em;
	float: left;
}

.details {
	color: #CCC;
	line-height: 1;
	font-size: .8em;
}

.details:after {
	display: inline-block;
	margin: 0 4px 3px 6px;
	border-style: solid;
	border-color: #00adaa transparent;
	content: "";
	height: 0;
}

.details-down:after {
	border-width: 3px 3px 0;
}

.details-up:after {
	border-width: 0 3px 3px;
}

.h1, .h2 {
	margin: 16px 0;
	font-size: 2em;
}

.h2 {
	font-weight: normal;
	font-size: 1.5em;
}

.a {
	text-decoration: none;
	color: inherit;
}

.text {
	margin: 1em 0;
	line-height: 1.3;
	font-size: 1em;
}

.link-button, .input-button {
	display: block;
	border-radius: 2px;
	background: #e37314;
	padding: 0 .8em;
	margin-bottom: 16px;
	text-align: center;
	line-height: 2.3;
	color: #fff;
	cursor: pointer;
	text-decoration: none;
}

.link-button {
	display: inline-block;
}

.link-button a{
	text-decoration: none;
	color: inherit;
}

.link-button:focus, .input-button:focus {
	background: #00adaa;
}

.input, .input-button, .select {
	display: inline-block;
	font-family: inherit;
	font-size: 1em;
}

.input, .select {
	border: 1px solid #d9d6d5;
	background: #fff;
	padding: .5em .6em;
}

.input {
	margin: 8px 0;
}

/*.input-text-valid {
	border-color: #00adaa;
}*/

.input:focus {
	border-color: #e37314;
}

.input-button {
	border: 0 none;
	cursor: pointer;
	box-sizing: border-box;
	height: 2.3em;
}

.input-button::-moz-focus-inner {
	border: 0;
	padding: 0;
}

.has-submit {
	margin: 0;
	box-sizing: border-box;
	border-color: #e37314;
	border-right-width: 0;
	padding: 0 .6em;
	height: 2.3em;
	vertical-align: top;
}

.select-submit {
	margin: 0;
	border-radius: 0 2px 2px 0;
}

.option[value=""] {
	color: #888;
}

.block {
	display: block;
	box-sizing: border-box;
	margin: 8px 0;
	width: 100%;
}

.ul {
	list-style: none;
	list-style-type: none;
	margin: 0px;
	padding: 0px;
}

.float-right {
	float: right;
}

.float-left {
	float: left;
}

.button2 {
	display: inline-block;
	/*margin: -.4em 0 0;*/
	padding: 0 .5em;
	height: 1.625em;
	line-height: 1.625;
	font-size: .8em;
	vertical-align: top;
}

.small-text, .footer {
	line-height: 1.6;
	color: #888;
	font-size: .8em;
}

.link {
	cursor: pointer;
	text-decoration: none;
	color: #00adaa;
}

.link:hover {
	text-decoration: underline;
}

.link:focus {
	color: #00adaa;
}

.footer {
	padding: 0;
	overflow: hidden;
	list-style-type: none;
	line-height: 1.3;
}

.footer-item {
	float: left;
}

.footer-item:before {
	margin: 0 4px;
	content: "·";
}

.footer-item:first-child:before {
	display: none;
}

.footer-link {
	text-decoration: none;
	color: inherit;
}

.footer-link:hover {
	text-decoration: underline;
}

.hidden {
	display: none;
}

#errorList {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	z-index: 999999;
	padding: 0 16px;
}

.errorBox {
	margin: 16px auto;
	box-shadow: 0px 2px 4px rgba(0,0,0,0.16);
	padding: 16px;
	max-width: 600px;
}

/* Large version */
@media (min-width: 1441px) {
	.main {
		max-width: 1180px;
	}

	.header-padding {
		max-width: 1148px;
	}

	.box-padding {
		margin: 20px;
	}

	.h1, .h2 {
		margin: 20px 0;
	}

	.input {
		margin: 10px 0;
	}
}

/* Small version */
@media (max-width: 976px) {
	.header {
		position: absolute;
	}
}

/* Mobile version - inherits from small version*/
@media (max-width: 623px) {
	.header-nav {
		position: relative;
	}

	.header-item {
		width: 16.666%;
		text-align: center;
	}

	.header-split {
		display: none;
	}

	.header-space-extra {
		height: 120px;
	}

	.header-fixed {
		position: fixed;
	}

	.header-fixed .logo-link {
		display: none;
	}

	.main {
		padding-bottom: 0;
	}

	.column-wrapper {
		margin: 0;
		padding: 0;
		overflow: visible;
	}

	.column-2 {
		margin: 8px;
		float: none;
		width: auto;
	}

	.column-box, .box {
		border-radius: 0;
	}

	.column-box {
		margin: 0;
	}

	.box, .box-padding {
		margin: 8px;
	}

	.h2 {
		margin: 10px 0;
		border-bottom: 1px solid #d9d6d5;
		padding: 0 0 10px;
		line-height: 1;
		color: #a39791;
		font-weight: bold;
		font-size: .92em;
	}

	.float-right {
		display: block;
		float: none;
		margin: 8px 0;
		text-align: center;
	}

	.has-submit {
		display: block;
		margin: 8px 0;
		border-right-width: 1px;
		width: 100%;
	}

	.select-submit {
		display: block;
		margin: 8px 0;
		border-radius: 2px;
		width: 100%;
	}

	.not-mobile {
		display: none;
	}

	.text, .small-text {
		margin: 8px 0;
	}
}

/* ADDED BY MITALI */

/*position of image within container*/
.img {
	width:130px;
	height: 130px;
	background: #ebe6e7;
	border-width: 0.5px;
	border-color: #fff;
	display: block;
	margin-top: 7.5px;
	margin-bottom: 7.5px;
	margin-left: 12.5px;
}

.left-box {
	width: 160px;
	height: 60%;
	background: #fff;
	float: left;
}

/*box details for user pic*/
.userp {
	float: left;
	margin: 0 1.5%;
	border-radius: 2px;
	border-width: 1px;
	border-style: solid;
	border-color: #e9e6e5 #e4e0df #d5d1d0;
	background: #fff;
	width: 140 px;
	height:160 px;
	padding-right: 10px;
	margin-bottom: 12px;
}

.searches {
	float: left;
	width: 50%;
	height: 100%;
	border-radius: 2px;
	/* border: 1px solid #d2c7be; */
	border-width: 1px;
	border-style: solid;
	border-color: #e9e6e5 #e4e0df #d5d1d0;
	background: #fff;
}

.reviews {
	width: 30%;
	height: 100%;
	float: right;
	margin-right: 20px;
	border-radius: 2px;
	/* border: 1px solid #d2c7be; */
	border-width: 1px;
	border-style: solid;
	border-color: #e9e6e5 #e4e0df #d5d1d0;
	background: #fff;
}

.search-element {
	list-style: none;
}

.review-element {
	list-style: none;
}

.titletext {
	font-family: 'Open Sans', arial, sans-serif;
	text-decoration: none;
	font-weight: bold;
	text-align: center;
	padding-bottom: 20px;
}

.nametext {
	font-family: 'Open Sans', arial, sans-serif;
	text-decoration: none;
	text-align: center;
}

